# merni

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  codspeed.yml
benches/: benches.rs  cadence.rs  callgrind.rs  criterion.rs  divan.rs  locals.rs  merni.rs  metrics_noop.rs  metrics_statsd.rs  tags.rs  tango.rs
examples/: datadog.rs
src/: aggregator.rs  cadence1.rs  datadog.rs  dispatch.rs  globals.rs  key.rs  lib.rs  macros.rs  metric.rs  sink.rs  statsd.rs  tags.rs  testing.rs  tests.rs  timer.rs  types.rs  types2.rs
src/aggregator/: mod.rs  testing.rs  tests.rs  timer.rs
