[package]
name = "merni"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = [
    "Arpad Borsos <swatinem@swatinem.de>",
]
documentation = "https://docs.rs/merni"
homepage = "https://github.com/Swatinem/merni"
repository = "https://github.com/Swatinem/merni"
description = "A low overhead metrics implementation."
autobenches = false

[features]
default = []
aggregator = ["dep:quanta", "dep:crossbeam-utils", "dep:rustc-hash", "dep:thread_local"]
cadence1 = ["dep:cadence"]
nightly = []
iai = []

[dependencies]
cadence = { version = "1.3.0", optional = true }
crossbeam-utils = { version = "0.8.19", optional = true }
quanta = { version = "0.12.2", optional = true }
rustc-hash = { version = "1.1.0", optional = true }
smallvec = "2.0.0-alpha.5"
smol_buf = "0.1.0"
thread_local = { version = "1.1.8", optional = true }

[dev-dependencies]
divan = { git = "https://github.com/Swatinem/divan.git", branch = "reuse-threads" }
smol_str = "0.2.1"

[target.'cfg(unix)'.dev-dependencies]
iai-callgrind = "0.11.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
debug = 1

# DIVAN_MIN_TIME=0.25 DIVAN_THREADS=1 cargo bench
[[bench]]
name = "divan"
harness = false
required-features = ["aggregator"]

[[bench]]
name = "locals"
harness = false

[[bench]]
name = "callgrind"
harness = false
required-features = ["iai"]
