[package]
name = "merni"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
documentation = "https://docs.rs/merni"
homepage = "https://github.com/Swatinem/merni"
repository = "https://github.com/Swatinem/merni"
description = "A low overhead metrics implementation."
autobenches = false

[features]
default = ["aggregator"]
aggregator = ["dep:crossbeam-utils", "dep:rustc-hash", "dep:thread_local"]
testing = []

[dependencies]
crossbeam-utils = { version = "0.8.21", optional = true }
rustc-hash = { version = "2.1.1", optional = true }
smallvec = "2.0.0-alpha.11"
smol_buf = "0.1.2"
thread_local = { version = "1.1.9", optional = true }

[dev-dependencies]
divan = { version = "3.0.5", package = "codspeed-divan-compat" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
debug = 1

# DIVAN_MIN_TIME=0.25 DIVAN_THREADS=1 cargo bench
[[bench]]
name = "divan"
harness = false
required-features = ["aggregator"]
