[package]
name = "merni"
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["Arpad Borsos <swatinem@swatinem.de>"]
documentation = "https://docs.rs/merni"
homepage = "https://github.com/Swatinem/merni"
repository = "https://github.com/Swatinem/merni"
description = "A low overhead metrics implementation."
autobenches = false

[features]
default = ["datadog"]
aggregator = ["dep:crossbeam-utils", "dep:rustc-hash", "dep:thread_local"]
datadog = [
    "aggregator",
    "serde",
    "dep:reqwest",
    "dep:serde_json",
    "dep:tokio",
    "dep:zstd",
]
serde = ["dep:serde"]
testing = []

[dependencies]
crossbeam-utils = { version = "0.8.21", optional = true }
reqwest = { version = "0.12.23", optional = true, features = ["zstd"] }
rustc-hash = { version = "2.1.1", optional = true }
serde = { version = "1.0.219", optional = true, features = ["derive"] }
serde_json = { version = "1.0.143", optional = true }
smallvec = "2.0.0-alpha.11"
smol_buf = "0.1.2"
thread_local = { version = "1.1.9", optional = true }
tokio = { version = "1.47.1", optional = true }
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]
divan = { version = "3.0.5", package = "codspeed-divan-compat" }
tokio = { version = "1.47.1", features = ["full"] }
tango-bench = "0.6.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
debug = 1

[[example]]
name = "datadog"
required-features = ["datadog"]

# DIVAN_MIN_TIME=0.25 DIVAN_THREADS=1 cargo bench --bench=divan
[[bench]]
name = "divan"
harness = false
required-features = ["aggregator"]

# cargo export target/benchmarks -- bench --bench=tango
# cargo bench --bench=tango -- compare target/benchmarks/tango --time 1
[[bench]]
name = "tango"
harness = false
required-features = ["aggregator"]
